Create `AuthenticationMiddlewareService`
- Created `AuthenticationMiddlewareService` to intercept HTTP requests by inserting the API key into headers;
- Updated `openapi.yaml`, `YandexScheduleService` and `MainScreenViewModel`, removing the apiKey parameter from all instances.
